--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,9 +46,9 @@
   body {
     @apply bg-background text-foreground font-sans antialiased selection:bg-primary/20 selection:text-primary;
     background-image: 
-      radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-      radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
-      radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
+      radial-gradient(at 0% 0%, rgb(74, 60, 143) 0, transparent 50%), 
+      radial-gradient(at 50% 0%, rgb(190, 194, 203) 0, transparent 50%), 
+      radial-gradient(at 100% 0%, rgb(224, 156, 169) 0, transparent 50%);
     background-attachment: fixed;
   }
   
